...
            android:layout_toEndOf="@id/btnBack"
            android:textColorHint="@color/colorSecondaryText"
            app:boxBackgroundColor="@color/colorPrimary"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Search Play Books"
                android:textColor="@color/colorSecondaryText" />

        </com.google.android.material.textfield.TextInputLayout>
...
            android:textSize="@dimen/text_regular_2x"
            android:text="Results from Google Play"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSearchBookList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvResultFromGooglePlay"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:paddingTop="@dimen/margin_medium_3" />
...
