...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--  Search Bar  -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewSearch"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2"
            app:cardElevation="@dimen/margin_card_medium"
...
