...
        android:layout_height="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_3"
        android:src="@drawable/ic_baseline_back_26dp_secondary" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etShelfName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnDone"
        android:layout_marginStart="@dimen/margin_medium_3"
        android:layout_marginTop="@dimen/margin_medium_3"
        android:layout_marginEnd="@dimen/margin_medium_3"
...
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/etShelfName"
        android:src="@drawable/background_line" />

    <RelativeLayout
        android:id="@+id/btnConfirmCreateShelf"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:background="@drawable/background_create_folder_button"
...
