...
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8">

            <TextView
                android:id="@+id/tvShelfName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10 Interaction Designs"
                android:textColor="@color/black"
                android:textSize="18sp" />

...
                android:layout_marginTop="@dimen/margin_medium"
                android:text="3 books" />

        </RelativeLayout>

        <CheckBox
            android:id="@+id/cbShelf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2"/>
    </LinearLayout>
...
