<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="?attr/bottomSheetStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/tvViewAs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_3"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="View as"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/text_regular_2x" />

    <ImageView
        android:id="@+id/ivSeparateLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_below="@id/tvViewAs"
        android:src="@drawable/background_line" />

    <RadioButton
        android:id="@+id/radioButtonList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivSeparateLine"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:text="List" />

    <RadioButton
        android:id="@+id/radioButtonLargeGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioButtonList"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:text="Large grid" />

    <RadioButton
        android:id="@+id/radioButtonSmallGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioButtonLargeGrid"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_large"
        android:text="Small grid" />

</RelativeLayout>