...
            android:layout_marginTop="@dimen/margin_medium_3"
            android:layout_marginBottom="@dimen/margin_medium_3"
            android:src="@drawable/ic_baseline_back_26dp_secondary"
            android:background="?attr/selectableItemBackgroundBorderless"/>

        <com.padcmyanmar.smtz.library.views.components.RoundedCornerImageView
            android:id="@+id/ivBookImage"
            android:layout_width="110dp"
            android:layout_height="180dp"
            android:layout_below="@id/btnBack"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:scaleType="fitXY"
            android:src="@mipmap/book"
            app:cornerRadius="@dimen/margin_medium" />


        <TextView
            android:id="@+id/tvBookNameBookDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnBack"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:layout_marginTop="@dimen/margin_medium_3"
            android:layout_marginBottom="@dimen/margin_medium"
...
            android:text="Lean UX: Designing Great Products with Agile Teams"
            android:textColor="@color/black"
            android:textSize="@dimen/text_regular_3x"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvBookAuthorNameBookDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvBookNameBookDetail"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:layout_toEndOf="@id/ivBookImage"
            android:text="Josh Waitzkin"
...
