...
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <!--  Carousel View  -->
            <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
                android:id="@+id/carouselRecyclerview"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginTop="@dimen/margin_medium_2"
                tools:listitem="@layout/view_holder_carousel"/>

            <!-- Empty View Pod  -->
            <include
                android:id="@+id/vpEmptyCarousel"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginTop="@dimen/margin_medium_2_n"
                layout="@layout/view_pod_empty_library"/>

            </RelativeLayout>
...
